--- a/src/tests/thread-process.yaml
+++ b/src/tests/thread-process.yaml
@@ -1,4 +1,4 @@
-```python
+code: |
 import threading
 
 def run(message):
@@ -9,22 +9,21 @@ th = threading.Thread(target=run, args=(msg))
 
 th.start()
 th.join()
-```
-Output: `TypeError: run() takes 1 positional argument but 12 were given`
-
-Tag: #thread/parameter/args
+output: "TypeError: run() takes 1 positional argument but 12 were given"
+tag:
+  - thread/parameter/args
 
 ---
 
-```python
+code: |
 import threading
 
 class A:
   def __init__(self, msg):
-    self.msg = msg
+  self.msg = msg
 
   def say_hello(self):
-    print(self.msg)
+  print(self.msg)
 
 a = A('Hello, World')
 
@@ -32,22 +31,21 @@ th = threading.Thread(target=a.say_hello)
 
 th.start()
 th.join()
-```
-Output: `Hello, World`
-
-Tag: #thread/parameter/target
+output: "Hello, World"
+tag:
+  - thread/parameter/target
 
 ---
 
-```python
+code: |
 import multiprocessing
 
 def fact(value, answer):
   if value == 0:
-    answer["value"] = 1
+  answer["value"] = 1
   answer["value"] = 1
   for i in range(1, value + 1):
-    answer["value"] *= i
+  answer["value"] *= i
 
 answer = {
   "value": 0
@@ -59,22 +57,21 @@ th.start()
 th.join()
 
 print(answer["value"])
-```
-Output: `0`
-
-Tag: #thread/parameter
+output: "0"
+tag:
+  - thread/parameter
 
 ---
 
-```python
+code: |
 import threading
 
 def fact(value, answer):
   if value == 0:
-    answer["value"] = 1
+  answer["value"] = 1
   answer["value"] = 1
   for i in range(1, value + 1):
-    answer["value"] *= i
+  answer["value"] *= i
 
 answer = {
   "value": 0
@@ -86,10 +83,9 @@ th.start()
 th.join()
 
 print(answer["value"])
-```
-Output: `120`
-
-Tag: #process/parameter
+output: "120"
+tag:
+  - process/parameter
 
 ---
 
