feat: update tests format

--- a/src/tests/byte.yaml
+++ b/src/tests/byte.yaml
@@ -1,8 +1,7 @@
 code: |
-a = bytes(range(3)).hex()
+  a = bytes(range(3)).hex()
 
-print(a)
-
+  print(a)
 output: "000102"
 tag:
   - byte
@@ -12,12 +11,12 @@ tag:
 ---
 
 code: |
-a = bytes(1)
-b = b'\x00'
-c = b'\x01'
+  a = bytes(1)
+  b = b'\x00'
+  c = b'\x01'
 
-print(a == b)
-print(a == c)
+  print(a == b)
+  print(a == c)
 output: "True False"
 tag:
   - byte/literal
@@ -26,11 +25,11 @@ tag:
 ---
 
 code: |
-a = b'\x00'
-b = b'\x01'
+  a = b'\x00'
+  b = b'\x01'
 
-print(a + b)
-output: "b'\x00\x01'"
+  print(a + b)
+output: "b'\\x00\\x01'"
 tag:
   - byte/literal
   - byte/operation/add
@@ -38,7 +37,7 @@ tag:
 ---
 
 code: |
-print(b'что выведет этот принт?')
+  print(b'что выведет этот принт?')
 output: "SyntaxError: bytes can only contain ASCII literal characters"
 tag:
   - byte/literal
@@ -46,14 +45,11 @@ tag:
 ---
 
 code: |
-a = 'a'.encode()
-b = b'a'
+  a = 'a'.encode()
+  b = b'a'
 
-print(a == b)
+  print(a == b)
 output: "True"
 tag:
   - byte/literal
   - string/operation/encode
-
----
-
