--- a/src/tests/type.yaml
+++ b/src/tests/type.yaml
@@ -1,18 +1,20 @@
 code: |
-from typing import Set
+  from typing import Set
 
-a: Set[int] = {1, 4, 5}
+  a: Set[int] = {1, 4, 5}
 
-print(isinstance(a, Set[int]))
+  print(isinstance(a, Set[int]))
 output: "TypeError: Subscripted generics cannot be used with class and instance checks"
 tag:
   - type/annotation
   - built-in/isinstance
 
 ---
+
 code: |
-a = (9)
-print(type(a))
+  a = (9)
+
+  print(type(a))
 output: "<class 'int'>"
 tag:
   - int
@@ -20,9 +22,11 @@ tag:
   - build-in/type
 
 ---
+
 code: |
-a = "Tree",
-print(type(a))
+  a = "Tree",
+
+  print(type(a))
 output: "<class 'tuple'>"
 tag:
   - tuple
@@ -30,18 +34,22 @@ tag:
   - build-in/type
 
 ---
+
 code: |
-a = "Hello"
-print(type(type(a)))
+  a = "Hello"
+
+  print(type(type(a)))
 output: "<class 'type'>"
 tag:
   - type
   - build-in/type
 
 ---
+
 code: |
-a = (el for el in range(105))
-print(type(a))
+  a = (el for el in range(105))
+
+  print(type(a))
 output: "<class 'generator'>"
 tag:
   - generator
@@ -49,9 +57,11 @@ tag:
   - build-in/type
 
 ---
+
 code: |
-a = {}
-print(type(a))
+  a = {}
+
+  print(type(a))
 output: "<class 'dict'>"
 tag:
   - dict
@@ -59,46 +69,54 @@ tag:
   - build-in/type
 
 ---
-code: |
-import math
 
-x = math.pow(2, 3)
-y = pow(2, 3)
-print(type(x) == type(y))
+code: |
+  import math
+
+  x = math.pow(2, 3)
+  y = pow(2, 3)
+
+  print(type(x) == type(y))
 output: "False"
 tag:
   - type/compare
 
 ---
+
 code: |
-elements = {
-  "key": "value",
-  4: 20,
-  "11": (1, 7, 2)
-}
-print(type(elements.keys()))
+  elements = {
+    "key": "value",
+    4: 20,
+    "11": (1, 7, 2)
+  }
+
+  print(type(elements.keys()))
 output: "<class 'dict_keys'>"
 tag:
-  - type #dict/operation/keys
+  - type
+  - dict/operation/keys
 
 ---
+
 code: |
-elements = {
-  "key": "value",
-  4: 20,
-  "11": (1, 7, 2)
-}
-print(type(elements.values()))
+  elements = {
+    "key": "value",
+    4: 20,
+    "11": (1, 7, 2)
+  }
+
+  print(type(elements.values()))
 output: "<class 'dict_values'>"
 tag:
-  - type #dict/operation/values
+  - type
+  - dict/operation/values
 
 ---
 code: |
-a: float = 1
-b: float = 2
+  a: float = 1
+  b: float = 2
 
-print((a + b).bit_length())
+  print((a + b).bit_length())
 output: "2"
 tag:
   - type/annotation
@@ -106,9 +124,9 @@ tag:
 
 ---
 code: |
-a: type = type(type)
-b = type(int)
-print(a is b)
+  a: type = type(type)
+  b = type(int)
+  print(a is b)
 output: "True"
 tag:
   - type/annotation
@@ -117,24 +135,23 @@ tag:
 ---
 
 code: |
-x = 3+5j
+  x = 3+5j
 
-print(type(x))
+  print(type(x))
 output: "<class 'complex'>"
 tag:
-  - complex,  #type
+  - complex
+  - type
   - build-in/type
 
 ---
 
 code: |
-text = b"Hello, World!!!"
+  text = b"Hello, World!!!"
 
-print(type(text))
+  print(type(text))
 output: "<class 'bytes'>"
 tag:
-  - bytes,  #type
+  - bytes
+  - type
   - build-in/type
-
----
-
