--- a/src/tests/expression.yaml
+++ b/src/tests/expression.yaml
@@ -1,26 +1,24 @@
 code: |
-print(print('hi!'))
-
-output: ""
-
-hi!
-None
+  print(print('hi!'))
+output: "hi! None"
 tag:
   - expression/priority
 
 ---
-code: |
-def get_username(user):
-  return user or 'anonymous'
 
-print(get_username(None))
+code: |
+  def get_username(user):
+    return user or 'anonymous'
+
+  print(get_username(None))
 output: "anonymous"
 tag:
   - expression/operation/or
 
 ---
+
 code: |
-print(1.5 % 1)
+  print(1.5 % 1)
 output: "0.5"
 tag:
   - expression/operation/modulo
@@ -28,10 +26,10 @@ tag:
 ---
 
 code: |
-a = None
-b = False
+  a = None
+  b = False
 
-print((a or b) or a)
+  print((a or b) or a)
 output: "None"
 tag:
   - expression/operation/or
@@ -39,7 +37,7 @@ tag:
 ---
 
 code: |
-print(bool(print(print(5))))
+  print(bool(print(print(5))))
 output: "5 None False"
 tag:
   - expression/priority
@@ -47,7 +45,7 @@ tag:
 ---
 
 code: |
-print(type( 3.4 // 2 ))
+  print(type( 3.4 // 2 ))
 output: "<class 'float'>"
 tag:
   - expression/integer_division
@@ -55,8 +53,8 @@ tag:
 ---
 
 code: |
-sum = lambda x, y: x + y
-print(sum(2,4))
+  sum = lambda x, y: x + y
+  print(sum(2,4))
 output: "6"
 tag:
   - expression/lambda
@@ -64,7 +62,7 @@ tag:
 ---
 
 code: |
-print(False == (not True))
+  print(False == (not True))
 output: "True"
 tag:
   - expression/operation/not
@@ -72,10 +70,10 @@ tag:
 ---
 
 code: |
-a = 0
-b = 1
+  a = 0
+  b = 1
 
-print(a and (b / a) >= 0)
+  print(a and (b / a) >= 0)
 output: "0"
 tag:
   - expression/operation/and
@@ -84,9 +82,9 @@ tag:
 ---
 
 code: |
-a = 0.1 + 0.2
-print(a == float(0.3))
-
+  a = 0.1 + 0.2
+  
+  print(a == float(0.3))
 output: "False"
 tag:
   - expression/operation/equality
@@ -94,14 +92,15 @@ tag:
 ---
 
 code: |
-m = 300
-count = 0
-while m <= 305:
-  m = m + 1
-  if m % 2 != 0:
-  continue
-  count += 1
-print(count)
+  m = 300
+  count = 0
+  while m <= 305:
+    m = m + 1
+    if m % 2 != 0:
+    continue
+    count += 1
+
+  print(count)
 output: "3"
 tag:
   - expression/operation/modulo
@@ -109,13 +108,14 @@ tag:
 ---
 
 code: |
-number = 0
-list = [2, 3, 4, 5]
-num = 5 % 2
+  number = 0
+  list = [2, 3, 4, 5]
+  num = 5 % 2
 
-if num not in list:
-  number = 1
-print(number)
+  if num not in list:
+    number = 1
+
+  print(number)
 output: "1"
 tag:
   - expression/operation/not_in
@@ -124,13 +124,14 @@ tag:
 ---
 
 code: |
-number = 0
-str = 'I love Python'
-letter = 'l'
+  number = 0
+  str = 'I love Python'
+  letter = 'l'
 
-if letter in str:
-  number = 1
-print(number)
+  if letter in str:
+    number = 1
+  
+  print(number)
 output: "1"
 tag:
   - expression/operation/in
@@ -139,9 +140,9 @@ tag:
 ---
 
 code: |
-data = {"age": 30, "name": "Bob"}
+  data = {"age": 30, "name": "Bob"}
 
-print("age" in data)
+  print("age" in data)
 output: "True"
 tag:
   - expression/operation/in
@@ -150,14 +151,14 @@ tag:
 ---
 
 code: |
-a = "2"
-b = 2
-c = type(b)
+  a = "2"
+  b = 2
+  c = type(b)
 
-if c(a) is b:
-  print("True")
-else:
-  print("False")
+  if c(a) is b:
+    print("True")
+  else:
+    print("False")
 output: "True"
 tag:
   - expression/operation/is
@@ -166,16 +167,14 @@ tag:
 ---
 
 code: |
-number = 0
-list = [2, 3, 4, 5]
-num = 5 ** 2
+  number = 0
+  list = [2, 3, 4, 5]
+  num = 5 ** 2
 
-if num not in list:
-  number = 1
-print(number)
-
+  if num not in list:
+    number = 1
+  
+  print(number)
 output: "1"
 tag:
   - expression/operation/power
-
----
