--- a/src/tests/iterator.yaml
+++ b/src/tests/iterator.yaml
@@ -1,20 +1,21 @@
 code: |
-numbers = [100, 200, 300]
-iterator = iter(numbers)
+  numbers = [100, 200, 300]
+  iterator = iter(numbers)
 
-print(len(iterator))
+  print(len(iterator))
 output: "TypeError: object of type 'list_iterator' has no len()"
 tag:
-  - iterator #build-in/len
+  - iterator
+  - build-in/len
 
 ---
 
 code: |
-numbers = [100, 200, 300]
-iterator1 = iter(numbers)
-iterator2 = iter(iterator1)
+  numbers = [100, 200, 300]
+  iterator1 = iter(numbers)
+  iterator2 = iter(iterator1)
 
-print(iterator1 is iterator2)
+  print(iterator1 is iterator2)
 output: "True"
 tag:
   - iterator
@@ -22,13 +23,12 @@ tag:
 ---
 
 code: |
-def custom_chain(*iterables):
-   for iterable in iterables:
-     yield from iterable
- 
- 
- for x in custom_chain([1, 2, 3], 'abc'):
-   print(x, end=' ')
+  def custom_chain(*iterables):
+    for iterable in iterables:
+      yield from iterable
+  
+  for x in custom_chain([1, 2, 3], 'abc'):
+    print(x, end=' ')
 output: "1 2 3 a b c"
 tag:
   - iterator
@@ -37,11 +37,11 @@ tag:
 ---
 
 code: |
-scores: dict = {'John': 99, 'Danny': 95}
+  scores: dict = {'John': 99, 'Danny': 95}
 
-iter_scores = iter(scores)
+  iter_scores = iter(scores)
 
-print(type(iter_scores))
+  print(type(iter_scores))
 output: "<class 'dict_keyiterator'>"
 tag:
   - iterator #build-in/dict
@@ -49,13 +49,12 @@ tag:
 ---
 
 code: |
-def custom_chain(*iterables):
-   for iterable in iterables:
-     yield from iterable
- 
- 
- for x in custom_chain([1, 2, 3], 'abc'):
-   print(x, end=' ')
+  def custom_chain(*iterables):
+    for iterable in iterables:
+      yield from iterable
+  
+  for x in custom_chain([1, 2, 3], 'abc'):
+    print(x, end=' ')
 output: "1 2 3 a b c"
 tag:
   - iterator
@@ -64,11 +63,10 @@ tag:
 ---
 
 code: |
-scores: dict = {'John': 99, 'Danny': 95}
+  scores: dict = {'John': 99, 'Danny': 95}
+  iter_scores = iter(scores)
 
-iter_scores = iter(scores)
-
-print(type(iter_scores))
+  print(type(iter_scores))
 output: "<class 'dict_keyiterator'>"
 tag:
   - iterator
