--- a/src/tests/object.yaml
+++ b/src/tests/object.yaml
@@ -1,9 +1,8 @@
 code: |
-a = [[] * 2] * 2
+  a = [[] * 2] * 2
+  a[0].append(1)
 
-a[0].append(1)
-
-print(a)
+  print(a)
 output: "[[1], [1]]"
 tag:
   - object/reference
@@ -13,10 +12,10 @@ tag:
 ---
 
 code: |
-a = [[0]*2]*2
-a[0][0] = 5
+  a = [[0]*2]*2
+  a[0][0] = 5
 
-print(a)
+  print(a)
 output: "[[5, 0], [5, 0]]"
 tag:
   - object/reference
@@ -25,10 +24,10 @@ tag:
 ---
 
 code: |
-a = [1, 2, 3]
-b = a[:]
+  a = [1, 2, 3]
+  b = a[:]
 
-print(a == b, id(a) == id(b))
+  print(a == b, id(a) == id(b))
 output: "True False"
 tag:
   - object/identify
@@ -36,10 +35,11 @@ tag:
 ---
 
 code: |
-a = [2, 4, 3]
-b = sorted(a)
-b.insert(0, 1)
-print(a[0])
+  a = [2, 4, 3]
+  b = sorted(a)
+  b.insert(0, 1)
+
+  print(a[0])
 output: "2"
 tag:
   - object/reference
@@ -47,16 +47,17 @@ tag:
 ---
 
 code: |
-def f(a, x):
-  return a.x + x
+  def f(a, x):
+    return a.x + x
 
-class Obj:
-  def f(self, x):
-    self.x = x
-    return x + 2
+  class Obj:
+    def f(self, x):
+      self.x = x
+      return x + 2
 
-obj = Obj()
-print(f(obj, obj.f(2)))
+  obj = Obj()
+
+  print(f(obj, obj.f(2)))
 output: "6"
 tag:
   - object/variable
@@ -64,52 +65,50 @@ tag:
 ---
 
 code: |
-a = 4
-b = a
+  a = 4
+  b = a
+  del a
+  a = 2
 
-del a
-a = 2
-print(b == 2)
-
-Output : `False`
+  print(b == 2)
+output : "False"
 tag:
   - object/reference
 
 ---
 
 code: |
-class ABC:
-  def __repr__(self):
-    return 'abc'
-  
-  def __str__(self):
-    return 'abc'
+  class ABC:
+    def __repr__(self):
+      return 'abc'
+    
+    def __str__(self):
+      return 'abc'
 
-a = 'abc'
-b = ABC()
+  a = 'abc'
+  b = ABC()
 
-print(a == b)
+  print(a == b)
 output: "False"
 tag:
   - object/compare
 
 ---
+
 code: |
+  class A:
+    def __init__(self, name):
+      self.__name = name
 
-class A:
-  def __init__(self, name):
-    self.__name = name
+    def greeting(self):
+      print(self.__name)
 
-  def greeting(self):
-    print(self.__name)
-
-class B(A):
-  def __init__(self):
-    pass
-  
-b = B("Anton")
-b.greeting()
-
+  class B(A):
+    def __init__(self):
+      pass
+    
+  b = B("Anton")
+  b.greeting()
 output: "NameError: name 'Anton' is not defined"
 tag:
   - object/variable
@@ -117,17 +116,15 @@ tag:
 ---
 
 code: |
+  class A:
+    def __init__(self, name):
+      __name = name
 
-class A:
-  def __init__(self, name):
-    __name = name
+    def greeting(self):
+      print(__name)
 
-  def greeting(self):
-    print(__name)
-
-a = A("Anton")
-a.greeting()
-
+  a = A("Anton")
+  a.greeting()
 output: "AttributeError: name '_A__name' is not defined"
 tag:
   - object/variable
@@ -135,14 +132,12 @@ tag:
 ---
 
 code: |
+  class B:
+    def __printer(self):
+      print("Hello")
 
-class B:
-  def __printer(self):
-     print("Hello")
-
-b = B()
-b.__printer()
-
+  b = B()
+  b.__printer()
 output: "AttributeError: 'B' object has no attribute '__printer'"
 tag:
   - object/access_identifier
@@ -150,70 +145,70 @@ tag:
 ---
 
 code: |
-class Soda:
-  def __init__(self, ingredient):
-    self.ingredient = ingredient if isinstance(ingredient, str) else None
+  class Soda:
+    def __init__(self, ingredient):
+      self.ingredient = ingredient if isinstance(ingredient, str) else None
 
-  def show_my_drink(self):
-    if self.ingredient:
-      print(f'Soda and {self.ingredient}')
-    else:
-      print('Regular soda')
+    def show_my_drink(self):
+      if self.ingredient:
+        print(f'Soda and {self.ingredient}')
+      else:
+        print('Regular soda')
 
-drink1 = Soda('raspberry')
-drink2 = Soda(5)
-print(drink1.show_my_drink(), drink2.show_my_drink())
-
-
-Output:Soda and raspberry
-     Regular soda
-     None None
+  drink1 = Soda('raspberry')
+  drink2 = Soda(5)
+  print(drink1.show_my_drink(), drink2.show_my_drink())
+output: "Soda and raspberry Regular soda None None"
 tag:
   - object/variable
 
 ---
 
 code: |
-a = [5, 3, []]
-b = [5, 3, []]
-print(a[-1] is b[-1])
+  a = [5, 3, []]
+  b = [5, 3, []]
 
+  print(a[-1] is b[-1])
 output: "False"
 tag:
   - object/identify
 
 ---
-code: |
-x = ["name", "id", "balance", "date"]
-x1 = x[:]
-x2 = x.copy()
-print(x1 == x2, x1 is x2)
 
+code: |
+  x = ["name", "id", "balance", "date"]
+  x1 = x[:]
+  x2 = x.copy()
+
+  print(x1 == x2, x1 is x2)
 output: "True False"
 tag:
   - object/compare #object/identify
 
 ---
-code: |
-h = "Hola"
-el1 = set(h)
-el2 = set(h)
-print(el1 is el2)
 
+code: |
+  h = "Hola"
+  el1 = set(h)
+  el2 = set(h)
+
+  print(el1 is el2)
 output: "False"
 tag:
   - object/identify
+
 ---
+
 code: |
-class Test:
-   test = 5
+  class Test:
+    test = 5
 
-  def init(self, test):
-    self.test = test
+    def init(self, test):
+      self.test = test
 
-obj = Test(5)
-print(Test.test is obj.test)
+  obj = Test(5)
 
+  print(Test.test is obj.test)
 output: "TypeError: Test() takes no arguments"
 tag:
   - object/identify
