--- a/src/tests/statement.yaml
+++ b/src/tests/statement.yaml
@@ -1,30 +1,33 @@
 code: |
-a, *b, c = [1, 2, 3, 4, 5]
+  a, *b, c = [1, 2, 3, 4, 5]
 
-print(a, b, c)
+  print(a, b, c)
 output: "1 [2, 3, 4] 5"
 tag:
   - statement/assignment
 
 ---
+
 code: |
-a, *b, c = [1, 2]
-print(a, b, c)
+  a, *b, c = [1, 2]
+
+  print(a, b, c)
 output: "1 [] 2"
 tag:
   - statement/assignment
  
 ---
+
 code: |
-word1 = 'welcome'
-word2 = 'home'
-r = list()
+  word1 = 'welcome'
+  word2 = 'home'
+  r = list()
 
-for x in word1:
-  for x in word2:
-    r.append(x)
+  for x in word1:
+    for x in word2:
+      r.append(x)
 
-print(r[2] + r[1] + r[2])
+  print(r[2] + r[1] + r[2])
 output: "mom"
 tag:
   - statement/for
@@ -32,11 +35,11 @@ tag:
 ---
 
 code: |
-a = [1, 2, 3]
-b = a
+  a = [1, 2, 3]
+  b = a
+  del a
 
-del a
-print(b)
+  print(b)
 output: "[1, 2, 3]"
 tag:
   - statement/del
@@ -44,15 +47,16 @@ tag:
 ---
 
 code: |
-numbers = [2, 3, 1, -2, 0]
+  numbers = [2, 3, 1, -2, 0]
 
-for i in enumerate(numbers):
-  if i[0] == 0:
-    if i[1] == 0:
-      print(i)
-  else:
-    continue
-print(i)
+  for i in enumerate(numbers):
+    if i[0] == 0:
+      if i[1] == 0:
+        print(i)
+    else:
+      continue
+
+  print(i)
 output: "(4,0)"
 tag:
   - statement/for
@@ -61,14 +65,14 @@ tag:
 ---
 
 code: |
-a = [0, 2, -4, -2, 1]
+  a = [0, 2, -4, -2, 1]
 
-for i in a:
-  if i < 0:
-    a.append(abs(i))
-  x = i
+  for i in a:
+    if i < 0:
+      a.append(abs(i))
+    x = i
 
-print(x)
+  print(x)
 output: "2"
 tag:
   - statement/for
@@ -76,15 +80,15 @@ tag:
 ---
 
 code: |
-a = 0
+  a = 0
 
-for i in range(10):
-  if i == 0:
-    a = 13
-  else:
-    a =- 1
+  for i in range(10):
+    if i == 0:
+      a = 13
+    else:
+      a =- 1
 
-print(a)
+  print(a)
 output: "-1"
 tag:
   - statement/for
@@ -92,77 +96,81 @@ tag:
 ---
 
 code: |
-try:
-  raise IndexError
-except IndexError:
-  print("Получаем исключение")
-else:
-  print("Ловим его")
-output: ""Получаем исключение""
+  try:
+    raise IndexError
+  except IndexError:
+    print("Получаем исключение")
+  else:
+    print("Ловим его")
+output: "Получаем исключение"
 tag:
   - statement/try
 
 ---
-code: |
-def f():
-  try: 
-    return 1
-  finally:
-    return 2
 
-print(f())
+code: |
+  def f():
+    try: 
+      return 1
+    finally:
+      return 2
+
+  print(f())
 output: "2"
 tag:
   - statement/try
 
 ---
-code: |
-a = {(13, 3), "qwer", 67, 1, 5, 33, 2, 7, "youths"}
-b = ["python"]
 
-for el in a:
-  b.append(el)
-else:
-  a.union(b)
-  
-print(a)
+code: |
+  a = {(13, 3), "qwer", 67, 1, 5, 33, 2, 7, "youths"}
+  b = ["python"]
+
+  for el in a:
+    b.append(el)
+  else:
+    a.union(b)
+    
+  print(a)
 output: "{1, 2, 67, 33, 5, 'python', 7, (13, 3), 'youths', 'qwer'}"
 tag:
   - statement/for
 
 ---
-code: |
-lst = [15, 30, 11, 12, 9, 0, 6, 4, 12, 13]
-free_list = ["free list"]
-last_element = 0
-n = 0
 
-while not any(free_list):
-  free_list.append(lst[n])
-  n += 1
-else:
-  last_element = free_list.pop()
-  
-print(last_element)
-output: ""free list""
+code: |
+  lst = [15, 30, 11, 12, 9, 0, 6, 4, 12, 13]
+  free_list = ["free list"]
+  last_element = 0
+  n = 0
+
+  while not any(free_list):
+    free_list.append(lst[n])
+    n += 1
+  else:
+    last_element = free_list.pop()
+    
+  print(last_element)
+output: "'free list'"
 tag:
   - statement/while
 
 ---
-code: |
-def foo(value):
-  num = 12
-  try:
-  num //= value
-  except:
-  num = 3
-  else:
-  num = 4
-  finally:
-  num = 5
-  return num
 
-print(foo(0))
+code: |
+  def foo(value):
+    num = 12
+    try:
+    num //= value
+    except:
+    num = 3
+    else:
+    num = 4
+    finally:
+    num = 5
+    return num
+
+  print(foo(0))
 output: "5"
 tag:
   - statement/try,  #statement/try/else
@@ -171,11 +179,11 @@ tag:
 ---
 
 code: |
-count = 0
-for letter in 'foo':
-  count+=1
-else:
-  print(count)
+  count = 0
+  for letter in 'foo':
+    count+=1
+  else:
+    print(count)
 output: "3"
 tag:
   - statement/for/else
@@ -183,17 +191,17 @@ tag:
 ---
 
 code: |
-def foo(value):
-  num = 12
-  try:
-  num //= value
-  except:
-  num = 3
-  else:
-  num = 4
-  return num
+  def foo(value):
+    num = 12
+    try:
+    num //= value
+    except:
+    num = 3
+    else:
+    num = 4
+    return num
 
-print(foo(4))
+  print(foo(4))
 output: "4"
 tag:
   - statement/try
@@ -202,11 +210,11 @@ tag:
 ---
 
 code: |
-numbers = [10, 40, 120, 230]
-for i in numbers:
-  if i > 100:
-    print(i)
-    break
+  numbers = [10, 40, 120, 230]
+  for i in numbers:
+    if i > 100:
+      print(i)
+      break
 output: "120"
 tag:
   - statement/break
@@ -214,7 +222,7 @@ tag:
 ---
 
 code: |
-assert "hello, world" is True
+  assert "hello, world" is True
 output: "AssertionError"
 tag:
   - statement/assert
@@ -224,11 +232,11 @@ tag:
 ---
 
 code: |
-x = 10
-y = 30
+  x = 10
+  y = 30
+  del x, y
 
-del x, y
-print(x, y)
+  print(x, y)
 output: "NameError: name 'x' is not defined"
 tag:
   - statement/del
@@ -236,9 +244,8 @@ tag:
 ---
 
 code: |
-value = True
-
-assert value == True 
+  value = True
+  assert value == True 
 output: "''"
 tag:
   - statement/assert
@@ -247,17 +254,17 @@ tag:
 ---
 
 code: |
-def user_check(choice):
-  if choice == 1:
-    print("Admin")
-  elif choice == 2:
-    print("Editor")
-  elif choice == 3:
-    print("Guest")
-  else:
-    print("Wrong entry")
+  def user_check(choice):
+    if choice == 1:
+      print("Admin")
+    elif choice == 2:
+      print("Editor")
+    elif choice == 3:
+      print("Guest")
+    else:
+      print("Wrong entry")
 
-user_check(4)
+  user_check(4)
 output: "Wrong entry"
 tag:
   - statement/if
@@ -265,14 +272,14 @@ tag:
 ---
 
 code: |
-num = 10
-sum = 0
-i = 1
-while i <= num:
-  sum = sum + i
-  i = i + 1
+  num = 10
+  sum = 0
+  i = 1
+  while i <= num:
+    sum = sum + i
+    i = i + 1
 
-print(sum)
+  print(sum)
 output: "55"
 tag:
   - statement/while
@@ -280,10 +287,10 @@ tag:
 ---
 
 code: |
-try:
-  print(1 / 0)
-except:
-  raise RuntimeError("Something bad happened")
+  try:
+    print(1 / 0)
+  except:
+    raise RuntimeError("Something bad happened")
 output: "ZeroDivisionError: division by zero"
 tag:
   - statement/raise
@@ -292,9 +299,9 @@ tag:
 ---
 
 code: |
-import math as m
+  import math as m
 
-print(m.sqrt(64))
+  print(m.sqrt(64))
 output: "8.0"
 tag:
   - statement/as
@@ -303,12 +310,13 @@ tag:
 ---
 
 code: |
-numbers = [2, 3, 11, 7]
-for i in numbers:
-  if i > 10:
-    continue
-  square = i * i
-print(square)
+  numbers = [2, 3, 11, 7]
+  for i in numbers:
+    if i > 10:
+      continue
+    square = i * i
+
+  print(square)
 output: "49"
 tag:
   - statement/continue
@@ -316,9 +324,10 @@ tag:
 ---
 
 code: |
-odd = [1, 5, 7, 9]
-even = [i + 1 for i in odd if i % 2 == 1]
-print(even[2])
+  odd = [1, 5, 7, 9]
+  even = [i + 1 for i in odd if i % 2 == 1]
+
+  print(even[2])
 output: "8"
 tag:
   - statement/for
@@ -326,19 +335,19 @@ tag:
 ---
 
 code: |
-a, b = 1, 0
-count = 0
+  a, b = 1, 0
+  count = 0
 
-try:
-  print(a/b)
-except ZeroDivisionError:
-  count += 1
-else:
-  count += 2
-finally:
-  count += 3
+  try:
+    print(a/b)
+  except ZeroDivisionError:
+    count += 1
+  else:
+    count += 2
+  finally:
+    count += 3
 
-print(count)
+  print(count)
 output: "4"
 tag:
   - statement/try/except
@@ -346,12 +355,13 @@ tag:
 ---
 
 code: |
-def numbers_range(n):
-  for i in range(n):
-    yield i
-a = numbers_range(4)
-print(next(a))
+  def numbers_range(n):
+    for i in range(n):
+      yield i
+  
+  a = numbers_range(4)
 
+  print(next(a))
 output: "0"
 tag:
   - statement/yield
@@ -360,12 +370,11 @@ tag:
 ---
 
 code: |
-value = True
-
-if value is not False:
-  print("False")
-else:
-  print("True")
+  value = True
+  if value is not False:
+    print("False")
+  else:
+    print("True")
 output: "False"
 tag:
   - statement/not
@@ -375,10 +384,10 @@ tag:
 ---
 
 code: |
-def get_even(numbers):
-  return [num for num in numbers if not num % 2]
+  def get_even(numbers):
+    return [num for num in numbers if not num % 2]
 
-print(len(get_even([1, 2, 3, 4, 5, 6])))
+  print(len(get_even([1, 2, 3, 4, 5, 6])))
 output: "3"
 tag:
   - statement/return
@@ -386,11 +395,10 @@ tag:
 ---
 
 code: |
-x = "hello"
+  x = "hello"
 
-if not type(x) is int:
-  raise TypeError("Only integers are allowed")
-
+  if not type(x) is int:
+    raise TypeError("Only integers are allowed")
 output: "TypeError: Only integers are allowed"
 tag:
   - statement/raise
@@ -398,14 +406,14 @@ tag:
 ---
 
 code: |
-values = []
+  values = []
 
-for i in range(10):
-  if i < 4:
-  continue
-  values.append(i)
+  for i in range(10):
+    if i < 4:
+    continue
+    values.append(i)
 
-print(values)
+  print(values)
 output: "[4, 5, 6, 7, 8, 9]"
 tag:
   - statement/for
@@ -415,15 +423,16 @@ tag:
 ---
 
 code: |
-idx = 15
-msg = 'message'
-if idx % 15 == 0:
-  pass
-elif idx % 5 == 0:
-  msg = 'Buzz'
-else:
-  pass
-print(msg)
+  idx = 15
+  msg = 'message'
+  if idx % 15 == 0:
+    pass
+  elif idx % 5 == 0:
+    msg = 'Buzz'
+  else:
+    pass
+
+  print(msg)
 output: "message"
 tag:
   - statement/pass
@@ -431,17 +440,17 @@ tag:
 ---
 
 code: |
-def foo():
-  x = 20
+  def foo():
+    x = 20
 
-  def bar():
-    global x
-    x = 25
-  bar()
-foo()
-print(x)
+    def bar():
+      global x
+      x = 25
+    bar()
+
+  foo()
+
+  print(x)
 output: "25"
 tag:
   - statement/global
-
----
