--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "gatsby": "^4.14.0",
     "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-transformer-yaml": "^4.14.0",
     "gatsby-transformer-yaml-full": "^4.0.5",
     "highlight.js": "^11.5.1",
+    "lmdb": "^2.4.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
